# pasters

./: .env  .gitignore  .travis.yaml  .travis.yml  Cargo.toml  LICENSE  README.md  TODO.md  start_database.sh
20170110171942_pastes/: up.sql
migrations/20170110171942_pastes/: up.sql
src/: lang.rs  lib.rs  main.rs  models.rs  paste_data.rs  paste_id.rs
static/: highlight.pack.js  style.css
templates/: 404.html.hbs  index.html.hbs  paste.html.hbs  success.html.hbs
