[package]
name = "pasters"
version = "0.2.0"
authors = ["Gramy <jan.keim@protonmail.com>"]

[[bin]]
name = "pasters"
path = "src/bin/main.rs"

[lib]
name = "plib"
path = "src/lib.rs"

[dependencies]
rocket = "0.1.*"
rocket_codegen = "0.1.*"
rand = "0.3.*"
lazy_static = "0.2.*"
diesel = { version = "0.9.*", features = ["postgres"] }
diesel_codegen = { version = "0.9.*", features = ["postgres"] }
dotenv = "0.8.*"
r2d2 = "0.7.*"
r2d2-diesel = "0.9.*"

[dev-dependencies]
stainless = "*"
rocket = { version = "0.1.*", features = ["testing"] }

[dependencies.rocket_contrib]
version = "0.1.*"
default-features = false
features = ["handlebars_templates"]
